[package]
name = "swmr-epoch"
version = "0.1.0"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "Lock-free single-writer multi-reader epoch-based garbage collection system with atomic pointers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/swmr-epoch"
homepage = "https://github.com/ShaoG-R/swmr-epoch"
documentation = "https://docs.rs/swmr-epoch"
keywords = ["epoch", "garbage-collection", "lock-free", "concurrent", "smr"]
categories = ["concurrency", "memory-management", "data-structures"]

[dependencies]
crossbeam-queue = "0.3.12"

[dev-dependencies]
crossbeam-epoch = "0.9"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "epoch_comparison"
harness = false

[[bench]]
name = "concurrent_workload"
harness = false