[package]
name = "swmr-epoch"
version = "0.3.6"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "Single-writer multi-reader epoch-based garbage collection system with minimal locking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/swmr-epoch"
homepage = "https://github.com/ShaoG-R/swmr-epoch"
documentation = "https://docs.rs/swmr-epoch"
keywords = ["epoch", "garbage-collection", "concurrent", "smr", "atomic"]
categories = ["concurrency", "memory-management", "data-structures"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[features]
# Enable loom for concurrency testing
loom = ["dep:loom"]

[dependencies]
loom = { version = "0.7", optional = true }

[dev-dependencies]
crossbeam-epoch = "0.9"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "epoch_comparison"
harness = false

[[bench]]
name = "concurrent_workload"
harness = false

[[bench]]
name = "manual_collection"
harness = false